finished item detail page

--- a/src/containers/Items.css
+++ b/src/containers/Items.css
@@ -7,13 +7,23 @@
   margin: 6px;
   background: whitesmoke;
   width: 30%;
+  height: 50px;
   height: 400px;
 }
 
 .ItemCard:hover {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
-  
+
 .PlantImage {
   width: 70%;
+}
+
+.ItemList {
+  float: left;
+  margin: 6px;
+  background: whitesmoke;
+  width: 30%;
+  height: 50px;
+  height: 50px;
 }
