--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,3 +1,4 @@
+
 .NavBar {
   margin: 20px;
   border-bottom: 2px solid black;
@@ -6,8 +7,32 @@
 .NavLink {
   text-decoration: none;
   font-size: 24px;
+  font-family: 'Open Sans', sans-serif;
   font-weight: bold;
   color: #354223;
   margin: 20px 20px 20px 20px;
 
+}
+
+.HomePage {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100%
+}
+
+.HomePage h2 {
+  font-size: 32px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  margin: 0;
+  color: #354223;
+
+}
+
+.HomePage p {
+  max-width: 500px;
+  font-size: 16px;
+  font-family: 'Open Sans', sans-serif;
+  color: #354223;
 }
